apply production configuration in deployment