@@ -8,7 +8,9 @@ if [ "$APP_MODE" = "preprod" ]; then
   #apply evolutions on database schema
   play evolutions:apply --%preprod
   #run app
-  play run --%preprod -Xmx512m -Xms512m -XX:PermSize=128M -XX:MaxPermSize=512M
-else
-  play run -Xmx512m -Xms512m -XX:PermSize=128M -XX:MaxPermSize=512M
+  play start --%preprod -Xmx1g -Xms1g
+else  
+  play start --%prod -Xmx1g -Xms1g
 fi
+
+tail -f /dev/null
